--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,3 +19,69 @@
 .welcome span {
     font-size: 160px;
 }
+.flex_space_between {
+    display: flex;
+    justify-content: space-between;
+}
+.header {
+    color: #1B1A18;
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.text {
+    color: #1B1A18;
+    font-size: 18px;
+    font-weight: 400;
+}
+.tours_slider_box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.track_box {
+    width: 430px;
+}
+.tours {
+    overflow: hidden;
+}
+.tour {
+    background: var(--color-gray);
+    border-radius: 60px;
+    padding: 15px 15px 30px;
+    width: 420px;
+}
+.tour img {
+    border-radius: 40px;
+    width: 400px;
+}
+.tour_header {
+    color: #1B1A18;
+    font-size: 22px;
+    font-weight: 700;
+}
+.tour_text {
+    color: #616161;
+    font-size: 18px;
+    font-weight: 400;
+}
+.arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--color-black);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 700;
+    cursor: pointer;
+    margin: 10px;
+}
+.margin_top {
+    margin-top: 60px;
+}
+.text_box {
+    width: 40%;
+}
