--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,6 @@ nav a, .drop_btn {
     cursor: pointer;
     transition: all .3s;
 }
-.active_header_btn, .header_hover:hover, footer a:hover {
-    background: var(--color-yellow);
-    color: var(--color-black);
-}
 .drop_container {
     position: relative;
     display: flex;
@@ -66,16 +62,26 @@ nav a, .drop_btn {
     font-weight: bold;
     text-decoration: none;
     color: #fff;
-    width: 190px;
+    width: 240px;
+    padding: 10px 30px;
+    background: #fff;
+    color: var(--color-black);
     z-index: 1;
 }
 .drop {
     position: absolute;
-    margin-top: 100px;
+    left: 10px;
+    top: 0px;
     padding-top: 50px;
     display: flex;
     flex-direction: column;
-
+    width: 240px;
+    background: var(--color-gray);
+    border-radius: 15px;
+}
+.drop a {
+    color: var(--color-black);
+    margin: 5px 5px;
 }
 nav div {
     display: flex;
@@ -94,6 +100,10 @@ nav div {
     margin: 0px 10px;
     padding: 0px;
 }
+.active_header_btn, .hover:hover, .drop_btn_active, .btn_active {
+    background: var(--color-yellow);
+    color: var(--color-black);
+}
 /* FOOTER */
 footer {
     background: var(--color-black);
@@ -104,6 +114,7 @@ footer {
     left: 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 footer .container {
     display: flex;
