--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,7 @@
     justify-content: space-between;
 }
 .header {
+    font-family: 'Montserrat Alternates', sans-serif;
     color: #1B1A18;
     font-size: 26px;
     font-weight: 700;
@@ -31,7 +32,7 @@
 }
 .text {
     color: #1B1A18;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 400;
 }
 .tours_slider_box {
@@ -80,8 +81,193 @@
     margin: 10px;
 }
 .margin_top {
-    margin-top: 60px;
+    margin-top: 100px;
 }
 .text_box {
     width: 40%;
+}
+.event_slider_box {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
+.event_track_box {
+    width: 90%;
+}
+.event {
+    background: var(--color-gray);
+    border-radius: 60px;
+    padding: 15px 15px 30px;
+    margin: 0px 5px;
+}
+.event img {
+    width: 100%;
+    border-radius: 40px;
+}
+.page_link, .btn_house_more {
+    padding: 5px 10px;
+    background: var(--color-green);
+    border-radius: 15px;
+    color: #FFF;
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: none;
+    transition: all .3s;
+}
+.page_link:hover, .btn_house_more:hover {
+    background: var(--color-yellow);
+    color: var(--color-black);
+}
+.marry_img {
+    width: 60%;
+    border-radius: 40px;
+    margin-left: 30px;
+}
+.houses {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.house {
+    width: 31%;
+    border-radius: 40px;
+}
+.house img {
+    width: 100%;
+    height: 400px;
+    border-radius: 30px;
+}
+.house_title {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+}
+.house_desc {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.fun_main_img_container {
+    width: 50%;
+    height: 750px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.fun_img_container {
+    width: 100%;
+    height: 365px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.fun_main_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.fun_images {
+    padding-left: 30px;
+    width: 50%;
+}
+.fun_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.fun_img_container:nth-child(1) {
+    margin-bottom: 20px;
+}
+.milk_img_container {
+    width: 50%;
+    height: 500px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.milk_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.milk_text {
+    width: 50%;
+    padding-right: 30px;
+}
+.goals_title {
+    width: 100%;
+    text-align: center;
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.goals {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+}
+.goal {
+    display: flex;
+    width: 50%;
+    margin-block: 10px;
+}
+.goal_img_container {
+    width: 50%;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.goal_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.goal_header {
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+.goal_text {
+    width: 50%;
+    padding: 30px 10px;
+}
+.investors {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    margin-block: 20px;
+}
+
+/* MEDIA QUARIES */
+@media screen {
+    /* Portrait tablets and medium desktops */
+    @media (min-width: 992px) and (max-width: 1199px) {
+        .container {
+            width: 980px;
+        }
+    }
+    
+    /* Portrait tablets and small desktops */
+    @media (min-width: 768px) and (max-width: 991px) {
+        .container {
+            width: 760px;
+        }
+    }
+    
+    /* Landscape phones and portrait tablets */
+    @media (max-width: 767px) {
+        .container {
+            width: calc(100% - 20px)
+        }
+    }
+    
+    /* Landscape phones and smaller */
+    @media (max-width: 480px) {
+        .container {
+            width: 100%;
+        }
+    }
 }
