--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ nav {
     align-items: center;
     height: 120px;
 }
-nav a, .drop_btn {
+nav a {
     font-size: 22px;
     font-weight: bold;
     text-decoration: none;
@@ -57,27 +57,32 @@ nav a, .drop_btn {
 }
 .drop_btn {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 22px;
     font-weight: bold;
     text-decoration: none;
     color: #fff;
     width: 240px;
     padding: 10px 30px;
+    border-radius: 15px;
     background: #fff;
     color: var(--color-black);
+    cursor: pointer;
     z-index: 1;
+    transition: all .3s;
 }
 .drop {
     position: absolute;
-    left: 10px;
-    top: 0px;
-    padding-top: 50px;
+    top: 20px;
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
     width: 240px;
     background: var(--color-gray);
     border-radius: 15px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: all .5s;
 }
 .drop a {
     color: var(--color-black);
