--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -54,10 +54,10 @@
     background: #0a0a0a8c;
     border-radius: 0px 0px 0px 20px;
     padding: 5px;
-	border-radius: 0px 0px 20px 20px;
+	border-radius: 0px 0px 0px 20px;
 }
-	
 .page_content{
+    margin-top: 70px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
