--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -1,6 +1,6 @@
 .event_position:nth-child(1){
-	width: 820px;
-    height: 400px;
+	width: 820px !important;
+    height: 400px !important;
 }
 .event_position:nth-child(1) img{
 	width: 820px;
@@ -34,6 +34,8 @@
 	position: relative;
     /* padding: 30px; */
     margin: 10px;
+	width: 400px;
+    height: 300px;
     /* border-radius: 30px; */
 }
 .events_catalog{
@@ -80,8 +82,40 @@
 .event_desc{
 	margin-left: 20px;
     margin-bottom: 10px;
-	
+
 }
 .event_position img{
 	border-radius: 20px;
+}
+.marry_slider_box {
+    width: 100%;
+}
+.marry_slider_track_box {
+    width: 100%;
+}
+.marry_img_box1 {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    border-radius: 20px;
+    margin-block: 10px;
+}
+.marry_img_box2 {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.marry_slider_track_box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 20px;
+}
+.page_content {
+    font-size: 20px;
+}
+.tel {
+    font-weight: 600;
 }
