--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,13 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
 }
 header, footer {
     width: 100%;
 }
 .container {
+    position: relative;
     width: 1170px;
     margin: 0px auto;
     font-size: 20px;
@@ -158,4 +160,38 @@ footer li::before {
     font-weight: bold;
     color: #fff;
     text-align: center;
+}
+.footer_list {
+    display: flex;
+}
+@media (max-width: 1200px) {
+	.container {
+		width: 950px;
+	}
+    .footer_list {
+        flex-direction: column;
+    }
+}
+@media (max-width: 950px) {
+	.container {
+		width: 640px;
+	}
+    .footer_logo {
+        position: relative;
+    }
+    .footer_contacts {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 650px) {
+	.container{
+		width: 100%;
+	}
+}
+@media (max-width: 550px) {
+	.container{
+		width: 100%;
+	}
 }
