--- a/assets/css/history.css
+++ b/assets/css/history.css
@@ -22,23 +22,18 @@
     height: 300px;
     overflow: hidden;
 }
-.about_image img {
+.about_image img, .about_image_side_box img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
+    border-radius: 20px;
 }
 .about_image_side_box{
     height: 300px;
     width: 400px;
     overflow: hidden;
     border-radius: 20px;
-}
-.about_image_side_box img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    object-position: center;
 }
 .about_content_img_side{
     display: flex;
@@ -58,4 +53,10 @@ h3 {
     text-align: center;
     font-family: 'Montserrat Alternates', sans-serif;
     text-indent: 0px;
+}
+h2 {
+    margin-bottom: 25px;
+}
+.flex_space_between .about_content_img_side {
+    width: 40%;
 }
