--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,10 +131,17 @@
     width: 31%;
     border-radius: 40px;
 }
-.house img {
+.house_img_container {
     width: 100%;
     height: 400px;
     border-radius: 30px;
+    overflow: hidden;
+}
+.house_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 .house_title {
     font-family: 'Montserrat Alternates', sans-serif;
@@ -238,32 +245,80 @@
 }
 
 /* MEDIA QUARIES */
-@media screen {
-    /* Portrait tablets and medium desktops */
-    @media (min-width: 992px) and (max-width: 1199px) {
-        .container {
-            width: 980px;
-        }
+@media (max-width: 1200px) {
+    .footer_list {
+        flex-direction: column;
     }
-    
-    /* Portrait tablets and small desktops */
-    @media (min-width: 768px) and (max-width: 991px) {
-        .container {
-            width: 760px;
-        }
+}
+@media (max-width: 950px) {
+    .welcome_title {
+        font-size: 70px;
     }
-    
-    /* Landscape phones and portrait tablets */
-    @media (max-width: 767px) {
-        .container {
-            width: calc(100% - 20px)
-        }
+    .welcome_title span {
+        font-size: 90px;
     }
-    
-    /* Landscape phones and smaller */
-    @media (max-width: 480px) {
-        .container {
-            width: 100%;
-        }
+    .flex_space_between {
+        flex-direction: column;
+    }
+    .text_box {
+        width: 100%;
+    }
+    .tours_slider_box {
+        width: 100%;
+    }
+    .event_track_box {
+        width: 100%;
+    }
+    .marry_img {
+        width: 100%;
+        margin-top: 20px;
+    }
+    .fun_images {
+        width: 100%;
+        padding-left: 0px;
+    }
+    .fun_main_img_container, .fun_img_container {
+        width: 100%;
+        height: 300px;
+        margin-bottom: 20px;
+    }
+    .houses {
+        flex-wrap: wrap;
+    }
+    .house {
+        width: 100%;
+    }
+    .milk_img_container {
+        width: 100%;
+    }
+    .milk_text {
+        width: 100%;
+        padding-right: 0px;
+        margin-bottom: 20px;
+    }
+    .page_link {
+        margin-block: 10px;
+    }
+    .goal {
+        width: 100%;
+    }
+    .footer_logo {
+        position: relative;
+    }
+    .footer_contacts {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 650px) {
+
+}
+@media (max-width: 550px) {
+    .welcome_title {
+        font-size: 40px;
+    }
+    .welcome_title span {
+        font-size: 60px;
     }
 }
