--- a/assets/css/milk.css
+++ b/assets/css/milk.css
@@ -17,6 +17,8 @@
 	width: 500px;
     border-radius: 20px;
     margin: 10px;
+	margin-top: 25px;
+
 }
 .milk_prod_cat{
     width: 1000px;
@@ -50,7 +52,59 @@
 	align-items: center;
 	flex-direction: column; 	
 }
-.information_block{
-	width: 1000px;
-    text-align: center;
+@media (max-width: 1200px) {
+	.container {
+		width: 970px;
+	}
+}
+@media (max-width: 950px) {
+	.container {
+		width: 640px !important;
+	}
+	.milk_prod_cat{
+		width: 800px !important;
+	}
+	.milk_gallery img{
+		width: 250px !important;
+	}
+	.milk_gallery{
+		width: 611px !important;
+	}
+}
+
+@media (max-width: 650px) {
+	.container {
+		width: 575px !important;
+	}
+	.milk_main_img {
+		width: 300px !important;
+	}
+	.milk_prod_cat{
+		width: 400px !important;
+		transform: scale(1);
+	}
+	.milk_gallery{
+		width: 300px !important;
+	}
+	.milk_prod_pos img{
+		width: 110px;
+   		height: 80px;
+	}
+	.milk_prod_pos {
+		width: 135px !important;
+		height: 160px !important;
+	  }
+	.milk_prod_name{
+		text-align: center;
+		margin-top: 2px !important;
+	}
+	.milk_prod_pos{
+		border-radius: 20px;
+	}
+	
+}
+@media (max-width: 550px) {
+	.container{
+		width: 100% !important;
+	}
 }
