--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,34 @@ header, footer {
     justify-content: space-between;
 }
 /* HEADER */
-header {
+#desktop {
     position: relative;
     background: var(--color-green);
     border-bottom: 2px solid #fff;
     height: 120px;
     z-index: 999;
+}
+#mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    padding: 20px 5px;
+    z-index: 999;
+    transition: all .5s;
+}
+.burger {
+    margin: 0px 10px;
+}
+.mobile_box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center ;
+    background: var(--color-green);
+    width: 100%;
+    height: 100px;
+    border-radius: 50px;
+    padding: 0px 20px;
 }
 nav {
     display: flex;
@@ -170,6 +192,24 @@ footer li::before {
 	}
     .footer_list {
         flex-direction: column;
+    }
+    #desktop {
+        display: none;
+    }
+    #mobile {
+        display: block;
+    }
+    .header_logo {
+        transform: translate(-50%, 0);
+        width: 90px;
+        height: 90px;
+    }
+    .header_logo img {
+        width: 90px;
+        height: 90px;
+    }
+    .mt {
+        margin-top: 140px !important;
     }
 }
 @media (max-width: 950px) {
