--- a/muvyr_admin/adminpanel.css
+++ b/muvyr_admin/adminpanel.css
@@ -11,17 +11,34 @@ main
 	min-height: 100vh;
 }
 
+#sidebar_all
+{
+	display: flex; 
+	position: fixed; 
+	z-index: 999;
+	transition: 0.6s ease;
+}
+
+#burger
+{
+	cursor: pointer;
+	height: 15px;
+}
+
 #sidebar
 {
 	width: 20vw;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	border-right: 1px solid black;
+	background-color: white;
 }
 
 #admincontent
 {
-	border-left: 1px solid black;
+	/*border-left: 1px solid black;*/
 	max-width: 80vw;
 	min-height: 100vh;
 	display: flex;
@@ -121,3 +138,11 @@ main
 	object-fit: cover;
 	object-position: center;
 }
+
+/*@media(max-width: 830px)
+{
+	#sidebar
+	{
+		background-color: red;
+	}
+}*/
