--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,7 @@
 }
 .track_box {
     width: 430px;
+    padding: 0px 40px;
 }
 .tours {
     overflow: hidden;
@@ -50,7 +51,8 @@
 }
 .tour img {
     border-radius: 40px;
-    width: 400px;
+    width: 100%;
+    margin: 0px auto;
 }
 .tour_header {
     color: #1B1A18;
@@ -62,7 +64,24 @@
     font-size: 18px;
     font-weight: 400;
 }
+.margin_top {
+    margin-top: 100px;
+}
+.text_box {
+    width: 40%;
+}
+.event_slider_box {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
 .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,22 +94,15 @@
     font-weight: 700;
     cursor: pointer;
     margin: 10px;
+    z-index: 3;
 }
-.margin_top {
-    margin-top: 100px;
-}
-.text_box {
-    width: 40%;
-}
-.event_slider_box {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 30px;
+#event_next_arrow, #tour_next_arrow {
+    right: 0;
 }
 .event_track_box {
     width: 90%;
+    margin: 0px auto;
+    padding: 0px 40px;
 }
 .event {
     background: var(--color-gray);
@@ -266,6 +278,9 @@
     .tours_slider_box {
         width: 100%;
     }
+    .track_box {
+        width: 100%;
+    }
     .event_track_box {
         width: 100%;
     }
@@ -309,6 +324,9 @@
         display: flex;
         flex-direction: column;
     }
+    .marry_img {
+        margin-left: 0;
+    }
 }
 
 @media (max-width: 650px) {
@@ -320,5 +338,11 @@
     }
     .welcome_title span {
         font-size: 60px;
+    }
+}
+@media (max-width: 455px) {
+    .icons {
+        opacity: 0;
+        z-index: -1;
     }
 }
