--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,11 @@ footer li::before {
 .footer_list {
     display: flex;
 }
+.footer_logo img {
+    width: 120px;
+    height: 120px;
+    margin: 10px auto;
+}
 @media (max-width: 1200px) {
 	.container {
 		width: 950px;
@@ -229,9 +234,30 @@ footer li::before {
 	.container{
 		width: 100%;
 	}
+    .footer_logo img {
+        width: 80px;
+        height: 80px;
+    }
+    footer {
+        font-size: 16px;
+    }
+    .footer_logo .icons {
+        display: none;
+    }
 }
 @media (max-width: 550px) {
 	.container{
 		width: 100%;
 	}
+}
+@media (max-width: 380px) {
+    footer .container {
+        flex-direction: column;
+    }
+    .welcome_title {
+        font-size: 30px;
+    }
+    .welcome_title span {
+        font-size: 45px;
+    }
 }
