--- a/muvyr_admin/adminpanel.css
+++ b/muvyr_admin/adminpanel.css
@@ -17,6 +17,7 @@ main
 	position: fixed; 
 	z-index: 999;
 	transition: 0.6s ease;
+	transform: translateX(-20vw);
 }
 
 #burger
@@ -39,11 +40,11 @@ main
 #admincontent
 {
 	/*border-left: 1px solid black;*/
-	max-width: 80vw;
+	width: 100%;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-/*	align-items: center;*/
+	align-items: center;
 	justify-content: flex-start;
 	padding: 20px; 	
 	overflow-x: scroll;
