--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -1,65 +1,35 @@
-.mt {
-    margin-top: 80px;
-}
-.event_position:nth-child(1){
-	width: 820px !important;
-    height: 400px !important;
-}
-.event_position:nth-child(1) img{
-	width: 820px;
-	height: 400px;
-}
-.event_position_desc:nth-child(1){
-	width: 820px !important;
-}
-.event_position_desc_main{
-	width: 820px;
-	background-color: #0a0a0ac4;
-	bottom: 0px;
-    position: absolute;
-	min-height: 65px;
-	color: rgb(255, 255, 255);
-	border-radius: 0px 0px 20px 20px;
-}
-.event_date{
-	text-align: end;
-}
-.event_position_desc{
-	width: 400px;
-	background-color: #0a0a0ac4;
-	bottom: 4px;
-    position: absolute;
-	min-height: 65px;
-	color: rgb(255, 255, 255);
-	border-radius: 0px 0px 20px 20px;
-}
-.event_position{
-	position: relative;
-    /* padding: 30px; */
-    margin: 10px;
-	width: 400px;
-    height: 300px;
-    /* border-radius: 30px; */
-}
-.events_catalog{
-	display: flex;
-    /* flex-direction: column; */
+.events_catalog {
+    display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    width: 1020px;
+    justify-content: space-between;
 }
-.event_position_time_desc{
-	position: absolute;
-    right: 0;
-    top: 0;
-    color: white;
-    box-shadow: 5px;
-    filter: drop-shadow(1px 1px 1px black);
-    background: #0a0a0a8c;
-    border-radius: 0px 0px 0px 20px;
-    padding: 5px;
-	border-radius: 0px 0px 0px 20px;
+.e_event {
+    width: 47%;
+    margin-bottom: 80px;
+}
+.e_event:nth-child(1) {
+    width: 100%;
+}
+.e_event_img_container {
+    width: 100%;
+    height: 400px;
+}
+.e_event_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 20px;
+}
+.e_title {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+.header {
+    font-size: 24px;
+    font-weight: 900;
+    margin-bottom: 20px;
 }
 .page_content{
 	display: flex;
@@ -67,22 +37,22 @@
 	align-items: center;
 	flex-direction: column;
 }
-.event_position img{
+.evene_position img{
 	width: 400px;
 }
-.event_name{
+.evene_name{
 	text-align: inherit;
     font-weight: 700;
     font-size: 24px;
 	margin-left: 20px;
     margin-top: 5px;
 }
-.event_desc{
+.evene_desc{
 	margin-left: 20px;
     margin-bottom: 10px;
 
 }
-.event_position img{
+.evene_position img{
 	border-radius: 20px;
 }
 .marry_slider_box {
@@ -128,41 +98,65 @@ h2 {
 .information_block {
     margin-block: 10px;
 }
+.modal_bachdrop {
+    opacity: 0;
+    z-index: -1;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    inset: 0;
+    transition: all .3s;
+}
+.modal {
+    position: relative;
+    background: #fff;
+    border-radius: 20px;
+    padding: 30px;
+    padding-top: 80px;
+}
+.modal_close {
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    font-size: 30px;
+    cursor: pointer;
+    transition: all .3s;
+}
+.modal_close:hover {
+    color: red;
+}
+.input_wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+.input_wrapper input {
+    font-size: 20px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid var(--color-black);
+    border-radius: 5px;
+    padding: 5px;
+}
+.e_btn {
+    text-align: center;
+    padding: 10px 5px;
+    border-radius: 15px;
+    background: var(--color-green);
+    color: #fff;
+    font-weight: 600;
+    margin-block: 20px;
+    cursor: pointer;
+}
 @media (max-width: 1200px){
-    .event_position:nth-child(1){
-        width: 100%;
-        height: 300px !important;
-    }
-    .event_position {
-        width: 400px !important;
-        height: 300px !important;
-        margin: 25px;
-    }
-    .event_position:nth-child(1) img{
-        width: 100%;
-        height: 300px;
-    }
-    .event_position_desc:nth-child(1){
-        width: 100% !important;
-    }
-    .event_position_desc_main{
-        width: 100% !important;
-    }
-    .events_catalog{
-        width: 100% !important;
-    }
     .marry_img_box2 {
         width: 150px;
         height: 150px;
     }
 }
 @media (max-width: 950px) {
-    .event_position {
-        width: 100% !important;
-    }
-    .event_position_desc {
-        width: 100%;
-    }
     .marry_img_box2 {
         width: 100px;
         height: 100px;
@@ -172,4 +166,7 @@ h2 {
     .marry_img_box1 {
         height: 350px;  
     }
+    .e_event {
+        width: 100%;
+    } 
 }
