--- a/assets/css/history.css
+++ b/assets/css/history.css
@@ -4,7 +4,6 @@
 }
 .about_content h2{
 	position: relative;
-    left: 30px;
 }
 .about_content_info{
     width: 500px;
@@ -59,4 +58,32 @@ h2 {
 }
 .flex_space_between .about_content_img_side {
     width: 40%;
+}
+.ILoveMuvyr {
+    width: 700px;
+}
+.about_image_side {
+    margin: 0px auto;
+}
+@media (max-width: 950px) {
+    .about_imgs {
+        flex-direction: column;
+    }
+    .about_content_img_side {
+        width: 100% !important;
+    }
+    .about_text_block {
+        width: 100%;
+    }
+    .about_image_side_box {
+        margin: 0px auto;
+    }
+    .ILoveMuvyr {
+        width: 100%;
+    }
+}
+@media (max-width: 650px) {
+    .about_image_side_box {
+        width: 100%;
+    }
 }
