--- a/assets/css/houses.css
+++ b/assets/css/houses.css
@@ -1,6 +1,3 @@
-.mt {
-    margin-top: 80px;
-}
 .houses_catalog {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +30,7 @@
     font-weight: 900;
     margin-bottom: 20px;
 }
-.h_btn {
+.h_btn, .h_btn1 {
     float: right;
     padding: 10px;
     background: var(--color-green);
@@ -63,6 +60,8 @@
     background: #fff;
     border-radius: 20px;
     padding: 30px;
+    overflow-y: scroll;
+    max-height: 90vh;
 }
 .modal_close {
     position: absolute;
@@ -71,12 +70,14 @@
     font-size: 30px;
     cursor: pointer;
     transition: all .3s;
+    z-index: 999;
 }
 .modal_close:hover {
     color: red;
 }
 .house_slider_box {
     width: 700px;
+    margin: 0px auto;
 }
 .house_slider_track_box {
     width: 100%;
@@ -126,6 +127,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
+    width: 100%;
 }
 .input_wrapper input {
     font-size: 20px;
@@ -134,4 +136,25 @@
     border-bottom: 1px solid var(--color-black);
     border-radius: 5px;
     padding: 5px;
+    width: 100%;
+}
+@media (max-width: 950px) {
+    .house_slider_box {
+        width: 600px;
+    }
+    .h_modal_text {
+        width: 100%;
+    }
+}
+@media (max-width: 650px) {
+    .h_house {
+        width: 100%;
+    }
+    .house_slider_box {
+        width: 300px;
+    }
+    .house_img_box2 {
+        width: 100px;
+        height: 100px;
+    }
 }
