--- a/assets/css/investors.css
+++ b/assets/css/investors.css
@@ -1,58 +1,52 @@
-.purpose_purpose{
-	text-align: end;
-    margin-top: 30px;
-}
-.purpose_purpose_text{
-	display: flex;
-    justify-content: end;
-    flex-direction: column;
-    text-align: end;
-}
-.purpose_info{
-	position: absolute;
-    top: 0;
-    right: 20px;
-    color: white;
-}
-.purpose_desc{
-	margin: 40px;
-    height: 200px;
-    width: 600px;
-}
-.purpose_name{
-	font-weight: 700;
-	margin: 40px;
-	text-align: end;
-	font-size: 24px;
-}
-.purpose_position img{
-	width: 295px;
-    height: 295px;
-    rotate: 90deg;
-    border-radius: 0px 0px 30px 30px;
-    margin: 5px;
-}
-.page_content{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-.information_block{
-	width: 1000px;
+.goals_title {
+    width: 100%;
     text-align: center;
+    font-size: 26px;
+    font-weight: 700;
+    margin-bottom: 30px;
 }
-.purpose_catalog{
-	width: 100%;
-    height: 100%;
+.goals {
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
 }
-.purpose_position{
-	background-color: rgba(0, 0, 0, 0.26);
-    width: 1000px;
-    height: 300px;
-    border-radius: 30px;
-	position: relative;	
+.goal {
+    display: flex;
+    width: 50%;
+    margin-block: 10px;
+}
+.goal_img_container {
+    width: 50%;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.goal_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.goal_header {
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+.goal_text {
+    width: 50%;
+    padding: 30px 10px;
+}
+.investors {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    margin-block: 20px;
+}
+@media (max-width: 950px) {
+    .goal {
+        width: 100%;
+    }
+    .marry_img {
+        margin-left: 0;
+    }
 }
