--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,7 +53,7 @@
     height: 200px;
     width: 320px;
     overflow: hidden;
-    border-radius: 20px;
+    border-radius: 40px;
 }
 .box img {
     width: 100%;
@@ -241,7 +241,7 @@
     overflow: hidden;
     border-radius: 20px;
 }
-.goal_img_container img {
+.goal_img_container img, .his_img_box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -262,12 +262,17 @@
     text-align: center;
     margin-block: 20px;
 }
+.his_img_box {
+    width: 40%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.his_text {
+    width: 40%;
+}
 
 /* MEDIA QUARIES */
 @media (max-width: 1200px) {
-    .footer_list {
-        flex-direction: column;
-    }
 }
 @media (max-width: 950px) {
     .welcome_title {
@@ -324,15 +329,14 @@
     .goal {
         width: 100%;
     }
-    .footer_logo {
-        position: relative;
-    }
-    .footer_contacts {
-        display: flex;
-        flex-direction: column;
-    }
     .marry_img {
         margin-left: 0;
+    }
+    .his_img_box {
+        width: 100%;
+    }
+    .his_text {
+        width: 100%;
     }
 }
 
@@ -348,8 +352,5 @@
     }
 }
 @media (max-width: 455px) {
-    .icons {
-        opacity: 0;
-        z-index: -1;
-    }
+
 }
